# gpt-pursuit

./: .gitignore  README.md  index.html  pyproject.toml
.cursor/rules/: product-overview.mdc  python-guidelines.mdc  typescript-guidelines.mdc
assets/: index-B7Xj_G4q.js  index-DY49POHN.css  index-P32G_EX7.js
data-acquisition/: landing_to_raw.ipynb  llm.py  llm_answer_question.ipynb  processed_to_refined.ipynb  pyproject.toml  question_output.json  raw_to_processed.ipynb  raw_to_processed_colab.ipynb  raw_to_processed_collab.ipynb  test_medgemma.ipynb  verify_llm_answer.ipynb
data-acquisition/data/: Trivia-Printable.xlsx  processing.py  ~$Trivia-Printable.xlsx
data-acquisition/data/refined/: 2025-12-14_19-25-59.json  2025-12-14_19-31-49.json  questions.json
data-acquisition/src/: answer.py  consts.py  data.py  llm.py  orchestrator.py  types.py
data-acquisition/src/evaluation/: exact.py  fuzzy.py  index.py  semantic.py  sequence.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  todo.md  vite.config.ts
frontend/data/: sample_trivia.json
frontend/src/: App.tsx  index.css
frontend/src/constants/: colors.ts
frontend/src/question/: QuestionPage.tsx  ResultPage.tsx  checkQuestion.tsx  queries.tsx  selectQuestion.tsx  submitQuestion.tsx  types.tsx
src/: trivia_printable_processing.ipynb
src/data/: Trivia-Printable.xlsx  Trivia-Printable_merged.csv
