[project]
name = "gpt-pursuit"
version = "0.1.0"
description = "Play Trivial Pursuit against LLM"
authors = [
    {name = "Lambert Bruyas"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
