[project]
name = "gpt-pursuit"
version = "0.1.0"
description = "Play Trivial Pursuit against LLM"
authors = [
    {name = "Lambert Bruyas"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "transformers (>=4.48.1,<5.0.0)",
    "torch (>=2.5.1,<3.0.0)",
    "huggingface-hub[cli] (>=0.27.1,<0.28.0)",
    "accelerate (>=1.3.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
