[project]
name = "gpt-pursuit"
version = "0.1.0"
description = "Play Trivial Pursuit against LLM"
authors = [
    {name = "Lambert Bruyas"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "transformers (>=4.48.1,<5.0.0)",
    "torch (>=2.5.1,<3.0.0)",
    "huggingface-hub[cli] (>=0.27.1,<0.28.0)",
    "accelerate (>=1.3.0,<2.0.0)",
    "sentence-transformers (>=4.0.2,<5.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "dotenv>=0.9.9",
]

